Wed Sep 13 22:08:56 1995  Theodore Y. Ts'o  (tytso@dcl)

	* srv_key.c (key_decrypt_keys):  Keys are encrypted in the key of
		the master key encryption type, not in the keytype of the
		key!!!  Removed erroneous krb5_use_enctype() call.

		Fixed -Wall flames all over the file.

Thu Sep  7 17:52:24 1995  Theodore Y. Ts'o  <tytso@dcl>

	* srv_key.c: Globally change use of ENCTYPE_DES_CBC_MD5 to
	        DEFAULT_KDC_ENCTYPE, so that we use the same encryption
		type by default for all KDC server programs.

	* srv_main.c (main): Set the default realm from the -r argument,
		so that correct defaulting takes place for things like
		krb5_parse().

	* srv_net.c (net_init): Use KRB5_ADM_SERVICE_INSTANCE to determine
		the service instance, instance of KRB5_ADMIN_SERVICE_NAME.

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * admin.c, passwd.c, srv_key.c, srv_main.c : 
		s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * admin.c, kadm5_defs.h, srv_key.c, srv_main.c : Remove krb5_enctype 
		references, and replace with krb5_keytype where appropriate.

Thu Aug 31 16:07:24 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_acl.c, kadm5_defs.h - Change operation of acl_op_permitted().  It
		now takes another argument which is the name of the target of
		the operation.  This allows finer granularity of control over
		administrative operations for clients.
	* srv_acl.c - Change SIGALRM to SIGHUP under POSIX_SIGNALS.  We want
		SIGHUP to reread the ACL file.
	* admin.c, passwd.c - Conform to new ACL operations.
	* kadmind5.M - Change description of ACL file.


Fri Aug 25 17:40:52 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_key.c - Fix automatic generation of changepw service which got
		screwed up when the database changes went in.


Thu Aug 17 13:50:28 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_key.c, kadm5_defs.h - Add key_{open,close}_db().  Close database
		after initialization.